--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
     <title>Restaurant Page</title>
 </head>
 <body>
-    <h1>Hello, world!</h1>
+    <header>
+        <nav>
+            <button>Home</button>
+            <button>Menu</button>
+            <button>About</button>
+        </nav>
+    </header>
+
+    <div id="content"></div>
 </body>
 </html>
