--- a/src/template.html
+++ b/src/template.html
@@ -8,9 +8,9 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button id="btn_home">Home</button>
+            <button id="btn_menu">Menu</button>
+            <button id="btn_about">About</button>
         </nav>
     </header>
 
